// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Micro Bar Chart Renders with data 1`] = `
<div
  class="MicroBarChart-container-0 undefined"
>
  <div>
    <div
      class="MicroBarChart-labelContainer-0"
    >
      <span
        class="MicroBarChart-label-0"
        title="Bar Number One"
      >
        Bar Number One
      </span>
      <span
        class="MicroBarChart-text-0"
        style="font-size: 12px;"
        title="10"
      >
        10
      </span>
    </div>
    <div
      class="MicroBarChart-valueContainer-0"
    >
      <div
        class="MicroBarChart-valueBar-0"
        style="width: 10%; background-color: rgb(15, 130, 143);"
      />
      <div
        class="MicroBarChart-fillUp-0"
      />
    </div>
  </div>
  <div>
    <div
      class="MicroBarChart-labelContainer-0"
    >
      <span
        class="MicroBarChart-label-0"
        title="Bar Number Two"
      >
        Bar Number Two
      </span>
      <span
        class="MicroBarChart-text-0"
        style="font-size: 12px;"
        title="100"
      >
        100
      </span>
    </div>
    <div
      class="MicroBarChart-valueContainer-0"
    >
      <div
        class="MicroBarChart-valueBar-0"
        style="width: 100%; background-color: rgb(90, 194, 206);"
      />
      <div
        class="MicroBarChart-fillUp-0"
      />
    </div>
  </div>
</div>
`;

exports[`Micro Bar Chart custom colors 1`] = `
<MicroBarChart
  colors={
    Array [
      "#f0ab00",
    ]
  }
  dataset={
    Array [
      Object {
        "label": "Bar Number One",
        "value": 10,
      },
      Object {
        "label": "Bar Number Two",
        "value": 100,
      },
    ]
  }
  labelFormatter={[Function]}
  valueFormatter={[Function]}
>
  <div
    className="MicroBarChart-container-0 undefined"
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    <div
      key="Bar Number One"
    >
      <div
        className="MicroBarChart-labelContainer-0"
      >
        <span
          className="MicroBarChart-label-0"
          title="Bar Number One"
        >
          Bar Number One
        </span>
        <span
          className="MicroBarChart-text-0"
          style={
            Object {
              "fontSize": "12px",
            }
          }
          title="10"
        >
          10
        </span>
      </div>
      <div
        className="MicroBarChart-valueContainer-0"
      >
        <div
          className="MicroBarChart-valueBar-0"
          style={
            Object {
              "backgroundColor": "#f0ab00",
              "width": "10%",
            }
          }
        />
        <div
          className="MicroBarChart-fillUp-0"
        />
      </div>
    </div>
    <div
      key="Bar Number Two"
    >
      <div
        className="MicroBarChart-labelContainer-0"
      >
        <span
          className="MicroBarChart-label-0"
          title="Bar Number Two"
        >
          Bar Number Two
        </span>
        <span
          className="MicroBarChart-text-0"
          style={
            Object {
              "fontSize": "12px",
            }
          }
          title="100"
        >
          100
        </span>
      </div>
      <div
        className="MicroBarChart-valueContainer-0"
      >
        <div
          className="MicroBarChart-valueBar-0"
          style={
            Object {
              "backgroundColor": undefined,
              "width": "100%",
            }
          }
        />
        <div
          className="MicroBarChart-fillUp-0"
        />
      </div>
    </div>
  </div>
</MicroBarChart>
`;

exports[`Micro Bar Chart element selection 1`] = `
<MicroBarChart
  dataset={
    Array [
      Object {
        "label": "Bar Number One",
        "value": 10,
      },
      Object {
        "label": "Bar Number Two",
        "value": 100,
      },
    ]
  }
  labelFormatter={[Function]}
  valueFormatter={[Function]}
  visibleDatasetCount={1}
>
  <div
    className="MicroBarChart-container-0 undefined"
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    <div
      key="Bar Number One"
    >
      <div
        className="MicroBarChart-labelContainer-0"
      >
        <span
          className="MicroBarChart-label-0"
          title="Bar Number One"
        >
          Bar Number One
        </span>
        <span
          className="MicroBarChart-text-0"
          style={
            Object {
              "fontSize": "12px",
            }
          }
          title="10"
        >
          10
        </span>
      </div>
      <div
        className="MicroBarChart-valueContainer-0"
      >
        <div
          className="MicroBarChart-valueBar-0"
          style={
            Object {
              "backgroundColor": "#0f828f",
              "width": "10%",
            }
          }
        />
        <div
          className="MicroBarChart-fillUp-0"
        />
      </div>
    </div>
  </div>
</MicroBarChart>
`;

exports[`Micro Bar Chart maxWidth selection 1`] = `
<MicroBarChart
  dataset={
    Array [
      Object {
        "label": "Bar Number One",
        "value": 10,
      },
      Object {
        "label": "Bar Number Two",
        "value": 100,
      },
    ]
  }
  labelFormatter={[Function]}
  maxWidth="200px"
  valueFormatter={[Function]}
>
  <div
    className="MicroBarChart-container-0 undefined"
    style={
      Object {
        "maxWidth": "200px",
      }
    }
  >
    <div
      key="Bar Number One"
    >
      <div
        className="MicroBarChart-labelContainer-0"
      >
        <span
          className="MicroBarChart-label-0"
          title="Bar Number One"
        >
          Bar Number One
        </span>
        <span
          className="MicroBarChart-text-0"
          style={
            Object {
              "fontSize": "12px",
            }
          }
          title="10"
        >
          10
        </span>
      </div>
      <div
        className="MicroBarChart-valueContainer-0"
      >
        <div
          className="MicroBarChart-valueBar-0"
          style={
            Object {
              "backgroundColor": "#0f828f",
              "width": "10%",
            }
          }
        />
        <div
          className="MicroBarChart-fillUp-0"
        />
      </div>
    </div>
    <div
      key="Bar Number Two"
    >
      <div
        className="MicroBarChart-labelContainer-0"
      >
        <span
          className="MicroBarChart-label-0"
          title="Bar Number Two"
        >
          Bar Number Two
        </span>
        <span
          className="MicroBarChart-text-0"
          style={
            Object {
              "fontSize": "12px",
            }
          }
          title="100"
        >
          100
        </span>
      </div>
      <div
        className="MicroBarChart-valueContainer-0"
      >
        <div
          className="MicroBarChart-valueBar-0"
          style={
            Object {
              "backgroundColor": "#5ac2ce",
              "width": "100%",
            }
          }
        />
        <div
          className="MicroBarChart-fillUp-0"
        />
      </div>
    </div>
  </div>
</MicroBarChart>
`;
